syntax = "proto3";

import "commons.proto";

package admin;

option java_package = "ar.edu.itba.pod.admin";
option java_multiple_files = true;

service AdminService {
  rpc addRide(RideRequest) returns (commons.Empty);
  rpc addPass(PassRequest) returns (commons.Empty);
  rpc loadRideCapacity(CapacityRequest) returns (CapacityResponse);
}

message RideRequest {
  string rideName = 1;
  string openingTime = 2;
  string closingTime = 3;
  int32 slotSize = 4;
}

enum PassType {
  UNDEFINED = 0;
  UNLIMITED = 1;
  THREE = 2;
  HALF_DAY = 3;
}

message PassRequest {
  string userId = 1;
  PassType type = 2;
  int32 dayOfYear = 3;
}

message CapacityRequest {
  string rideName = 1;
  int32 dayOfYear = 2;
  int32 capacity = 3;
}

message CapacityResponse {
  int32 pendingBookings = 1;
  int32 confirmedBookings = 2;
  int32 cancelledBookings = 3;
}
